@@ -2,8 +2,12 @@
 tlst-new-task=New task
 tlst-toggle-gui=View tasks
 
+[mod-setting-description]
+tlst-show-active-task=The active task is the topmost "in progress" task on your list that is at the root level (not a subtask).
+
 [mod-setting-name]
 tlst-new-task-on-confirm=Open new task window on confirm
+tlst-show-active-task=Show active task [img=info]
 
 [gui]
 tlst-add-subtask= +  Subtask
@@ -14,8 +18,9 @@ tlst-edit-task=Edit task
 tlst-expand-tooltip=Toggle details\nShift: Move up\nControl: Move down
 tlst-force=Force
 tlst-force-switch-description=Tasks shared among all in your same force
-tlst-new-task=New task
 tlst-new-task-instruction=New task (__CONTROL__confirm-gui__)
+tlst-new-task=New task
+tlst-no-active-task=No active task
 tlst-private-description=Private tasks are visible only to you
 tlst-private=Private
 tlst-private-switch-description=Tasks visible only to you
@@ -43,3 +48,8 @@ TaskList=Task List
 [shortcut-name]
 tlst-new-task=New task
 tlst-toggle-gui=Tasks
+
+[string-mod-setting]
+tlst-show-active-task-off=Off
+tlst-show-active-task-force=Force
+tlst-show-active-task-private=Private
