@@ -1,3 +1,4 @@
+local active_task_button = require("scripts.gui.active-task-button")
 local tasks_gui = require("scripts.gui.tasks.index")
 
 local player_data = {}
@@ -7,9 +8,11 @@ local player_data = {}
 function player_data.init(player)
   --- @class PlayerTable
   global.players[player.index] = {
+    --- @type number[]
     completed_tasks = {},
     flags = {},
     guis = {},
+    --- @type number[]
     tasks = {},
   }
 end
@@ -18,12 +21,21 @@ end
 --- @param player LuaPlayer
 --- @param player_table PlayerTable
 function player_data.refresh(player, player_table)
-  local Gui = player_table.guis.tasks
-  if Gui then
-    Gui:destroy()
+  local TasksGui = player_table.guis.tasks
+  if TasksGui then
+    TasksGui:destroy()
+  end
+  tasks_gui.new(player, player_table)
+
+  local EditTaskGui = player_table.guis.edit_task
+  if EditTaskGui then
+    EditTaskGui:destroy()
   end
 
-  tasks_gui.new(player, player_table)
+  active_task_button.destroy(player_table)
+  if player.mod_settings["tlst-show-active-task"].value ~= "off" then
+    active_task_button.build(player, player_table)
+  end
 end
 
 return player_data
